--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="petnamegenerator.css" rel="stylesheet" type="text/css">
   </head>
 <body>
+	<p>Keep clicking each button until you get a name you like!</p>
 	<br>
 	<br>
 	<br>
