--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
 
     	case "rabbit":
       		let r = Math.floor(Math.random() * rabbits.length);
-            	document.getElementById("span").innerText = rabbits[r];
+            	document.getElementById("span2").innerText = rabbits[r];
       		break;
 			
 	case "gecko":
       		let r = Math.floor(Math.random() * geckos.length);
-            	document.getElementById("span").innerText = geckos[r];
+            	document.getElementById("span5").innerText = geckos[r];
       		break;
 
     	case "dragon":
       		let r = Math.floor(Math.random() * beardies.length);
-            	document.getElementById("span").innerText = beardies[r];
+            	document.getElementById("span8").innerText = beardies[r];
       		break;
       
     	      }
@@ -119,7 +119,6 @@
         function reset() {
         	document.getElementById("span").innerText = " ";
         	document.getElementById("span2").innerText = " ";
-        	document.getElementById("span3").innerText = " ";
         	document.getElementById("span5").innerText = " ";
         	document.getElementById("span8").innerText = " ";
         }
